WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
144467
Fix text track language selection logic
https://bugs.webkit.org/show_bug.cgi?id=144467
Summary
Fix text track language selection logic
Eric Carlson
Reported
2015-04-30 13:07:00 PDT
Two tracks with the same language but different locales are weighted equally, causing the incorrect track to be chosen some of the time.
Attachments
Proposed patch.
(16.22 KB, text/plain)
2015-04-30 13:21 PDT
,
Eric Carlson
no flags
Details
Proposed patch.
(15.32 KB, patch)
2015-04-30 13:27 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2015-04-30 13:07:34 PDT
<
rdar://problem/20653145
>
Eric Carlson
Comment 2
2015-04-30 13:21:42 PDT
Created
attachment 252082
[details]
Proposed patch.
WebKit Commit Bot
Comment 3
2015-04-30 13:23:07 PDT
Attachment 252082
[details]
did not pass style-queue: ERROR: Source/WebKit2/WebProcess/WebPage/WebPage.cpp:4409: Should have a space between // and comment [whitespace/comments] [4] Total errors found: 1 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
Eric Carlson
Comment 4
2015-04-30 13:27:34 PDT
Created
attachment 252083
[details]
Proposed patch.
Brent Fulgham
Comment 5
2015-05-01 08:52:06 PDT
Comment on
attachment 252083
[details]
Proposed patch. r=me
WebKit Commit Bot
Comment 6
2015-05-01 09:58:56 PDT
Comment on
attachment 252083
[details]
Proposed patch. Clearing flags on attachment: 252083 Committed
r183676
: <
http://trac.webkit.org/changeset/183676
>
WebKit Commit Bot
Comment 7
2015-05-01 09:59:01 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug